--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -1,172 +1,180 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/qmui_config_color_white"
-    android:orientation="vertical"
-    tools:ignore="MissingConstraints">
+    android:layout_height="match_parent">
 
-    <ImageView
-        android:id="@+id/iv_close"
-        android:layout_width="16dp"
-        android:layout_height="16dp"
-        android:layout_marginStart="18dp"
-        android:layout_marginTop="18dp"
-        android:src="@mipmap/ic_close_x"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-
-    <TextView
-        android:id="@+id/tv_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="28.5dp"
-        android:layout_marginTop="27.5dp"
-        android:text="欢迎使用"
-        android:textColor="#ff020202"
-        android:textSize="21sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/iv_close" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="21dp"
-        android:text="请先登录数字海"
-        android:textColor="#ff989898"
-        android:textSize="13sp"
-        android:visibility="gone"
-        app:layout_constraintStart_toStartOf="@id/tv_title"
-        app:layout_constraintTop_toBottomOf="@id/tv_title" />
-
-    <EditText
-        android:id="@+id/et_phone"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="28.5dp"
-        android:layout_marginTop="48dp"
-        android:layout_marginEnd="28.5dp"
-        android:background="@drawable/conner5_solid_gray"
-        android:hint="请输入手机号"
-        android:paddingStart="12dp"
-        android:paddingTop="15dp"
-        android:paddingBottom="15dp"
-        android:textColorHint="#989898"
-        app:layout_constraintTop_toBottomOf="@id/tv_title" />
+        android:layout_height="match_parent"
+        android:background="@color/qmui_config_color_white"
+        android:orientation="vertical"
+        tools:ignore="MissingConstraints">
 
-    <ng.max.slideview.SlideView
-        android:id="@+id/slider"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
-        android:layout_marginBottom="15dp"
-        app:layout_constraintEnd_toEndOf="@id/et_phone"
-        app:layout_constraintStart_toStartOf="@id/et_phone"
-        app:layout_constraintTop_toBottomOf="@id/et_phone"
-        app:sv_buttonBackgroundColor="#FF2BA4D9"
-        app:sv_buttonImage="@mipmap/ic_right_hua"
-        app:sv_slideBackgroundColor="#FFF5F5F5"
-        app:sv_slideText="右滑验证"
-        app:sv_slideTextColor="#FF989898" />
-
-    <EditText
-
-        android:id="@+id/et_get_code"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="28.5dp"
-        android:layout_marginTop="23dp"
-        android:layout_marginEnd="28.5dp"
-        android:background="@drawable/conner5_solid_gray"
-        android:hint="请输入验证码"
-        android:paddingStart="12dp"
-        android:paddingTop="15dp"
-        android:paddingBottom="15dp"
-        android:textColorHint="#989898"
-        app:layout_constraintTop_toBottomOf="@id/slider" />
-
-    <TextView
-        android:id="@+id/tv_get_code"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:paddingEnd="15dp"
-        android:text="获取验证码"
-        android:textColor="#FF2BA4D9"
-        android:textSize="15sp"
-        app:layout_constraintBottom_toBottomOf="@id/et_get_code"
-        app:layout_constraintEnd_toEndOf="@id/et_get_code"
-        app:layout_constraintTop_toTopOf="@id/et_get_code" />
-
-    <EditText
-        android:id="@+id/et_psd"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="28.5dp"
-        android:layout_marginTop="23dp"
-        android:layout_marginEnd="28.5dp"
-        android:background="@drawable/conner5_solid_gray"
-        android:hint="请输入密码"
-        android:paddingStart="12dp"
-        android:paddingTop="15dp"
-        android:paddingBottom="15dp"
-        android:textColorHint="#989898"
-        app:layout_constraintTop_toBottomOf="@id/et_get_code" />
-
-    <EditText
-        android:id="@+id/et_ok_psd"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="28.5dp"
-        android:layout_marginTop="23dp"
-        android:layout_marginEnd="28.5dp"
-        android:background="@drawable/conner5_solid_gray"
-        android:hint="请再次输入密码"
-        android:paddingStart="12dp"
-        android:paddingTop="15dp"
-        android:paddingBottom="15dp"
-        android:textColorHint="#989898"
-        app:layout_constraintTop_toBottomOf="@id/et_psd" />
-
-    <EditText
-        android:id="@+id/et_number"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="28.5dp"
-        android:layout_marginTop="23dp"
-        android:layout_marginEnd="28.5dp"
-        android:background="@drawable/conner5_solid_gray"
-        android:hint="请再次输入账号"
-        android:paddingStart="12dp"
-        android:paddingTop="15dp"
-        android:paddingBottom="15dp"
-        android:textColorHint="#989898"
-        app:layout_constraintTop_toBottomOf="@id/et_ok_psd" />
-
-    <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
-        android:id="@+id/rb_ok"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="35dp"
-        android:padding="16dp"
-        android:text="注册"
-        android:textColor="@color/qmui_config_color_white"
-        app:layout_constraintEnd_toEndOf="@id/et_phone"
-        app:layout_constraintStart_toStartOf="@id/et_phone"
-        app:layout_constraintTop_toBottomOf="@id/et_number"
-        app:qmui_backgroundColor="#FF017BD0" />
+        <ImageView
+            android:id="@+id/iv_close"
+            android:layout_width="16dp"
+            android:layout_height="16dp"
+            android:layout_marginStart="18dp"
+            android:layout_marginTop="18dp"
+            android:src="@mipmap/ic_close_x"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="36dp"
-        android:text="登录表示同意《数字海用户协议》"
-        android:textColor="#ff5d5d5d"
-        android:textSize="12sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <TextView
+            android:id="@+id/tv_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="28.5dp"
+            android:layout_marginTop="27.5dp"
+            android:text="欢迎使用"
+            android:textColor="#ff020202"
+            android:textSize="21sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/iv_close" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="21dp"
+            android:text="请先登录数字海"
+            android:textColor="#ff989898"
+            android:textSize="13sp"
+            android:visibility="gone"
+            app:layout_constraintStart_toStartOf="@id/tv_title"
+            app:layout_constraintTop_toBottomOf="@id/tv_title" />
+
+        <EditText
+            android:id="@+id/et_phone"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="28.5dp"
+            android:layout_marginTop="48dp"
+            android:layout_marginEnd="28.5dp"
+            android:background="@drawable/conner5_solid_gray"
+            android:hint="请输入手机号"
+            android:maxLength="11"
+            android:paddingStart="12dp"
+            android:paddingTop="15dp"
+            android:paddingBottom="15dp"
+            android:textColorHint="#989898"
+            app:layout_constraintTop_toBottomOf="@id/tv_title" />
+
+        <ng.max.slideview.SlideView
+            android:id="@+id/slider"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
+            android:layout_marginBottom="15dp"
+            app:layout_constraintEnd_toEndOf="@id/et_phone"
+            app:layout_constraintStart_toStartOf="@id/et_phone"
+            app:layout_constraintTop_toBottomOf="@id/et_phone"
+            app:sv_buttonBackgroundColor="#FF2BA4D9"
+            app:sv_buttonImage="@mipmap/ic_right_hua"
+            app:sv_slideBackgroundColor="#FFF5F5F5"
+            app:sv_slideText="右滑验证"
+            app:sv_slideTextColor="#FF989898" />
+
+        <EditText
+
+            android:id="@+id/et_get_code"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="28.5dp"
+            android:layout_marginTop="23dp"
+            android:layout_marginEnd="28.5dp"
+            android:background="@drawable/conner5_solid_gray"
+            android:hint="请输入验证码"
+            android:paddingStart="12dp"
+            android:paddingTop="15dp"
+            android:paddingBottom="15dp"
+            android:textColorHint="#989898"
+            app:layout_constraintTop_toBottomOf="@id/slider" />
+
+        <TextView
+            android:id="@+id/tv_get_code"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingEnd="15dp"
+            android:text="获取验证码"
+            android:textColor="#FF2BA4D9"
+            android:textSize="15sp"
+            app:layout_constraintBottom_toBottomOf="@id/et_get_code"
+            app:layout_constraintEnd_toEndOf="@id/et_get_code"
+            app:layout_constraintTop_toTopOf="@id/et_get_code" />
+
+        <EditText
+            android:id="@+id/et_psd"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="28.5dp"
+            android:layout_marginTop="23dp"
+            android:layout_marginEnd="28.5dp"
+            android:background="@drawable/conner5_solid_gray"
+            android:hint="请输入密码"
+            android:paddingStart="12dp"
+            android:paddingTop="15dp"
+            android:paddingBottom="15dp"
+            android:textColorHint="#989898"
+            app:layout_constraintTop_toBottomOf="@id/et_get_code" />
+
+        <EditText
+            android:id="@+id/et_ok_psd"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="28.5dp"
+            android:layout_marginTop="23dp"
+            android:layout_marginEnd="28.5dp"
+            android:background="@drawable/conner5_solid_gray"
+            android:hint="请再次输入密码"
+            android:paddingStart="12dp"
+            android:paddingTop="15dp"
+            android:paddingBottom="15dp"
+            android:textColorHint="#989898"
+            app:layout_constraintTop_toBottomOf="@id/et_psd" />
+
+        <EditText
+            android:id="@+id/et_number"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="28.5dp"
+            android:layout_marginTop="23dp"
+            android:layout_marginEnd="28.5dp"
+            android:background="@drawable/conner5_solid_gray"
+            android:hint="请再次输入账号"
+            android:paddingStart="12dp"
+            android:paddingTop="15dp"
+            android:paddingBottom="15dp"
+            android:textColorHint="#989898"
+            app:layout_constraintTop_toBottomOf="@id/et_ok_psd" />
+
+        <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
+            android:id="@+id/rb_ok"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="35dp"
+            android:padding="16dp"
+            android:text="注册"
+            android:textColor="@color/qmui_config_color_white"
+            app:layout_constraintEnd_toEndOf="@id/et_phone"
+            app:layout_constraintStart_toStartOf="@id/et_phone"
+            app:layout_constraintTop_toBottomOf="@id/et_number"
+            app:qmui_backgroundColor="#FF017BD0" />
+
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="36dp"
+            android:text="登录表示同意《数字海用户协议》"
+            android:textColor="#ff5d5d5d"
+            android:textSize="12sp"
+            android:layout_marginTop="30dp"
+            android:paddingBottom="30dp"
+            app:layout_constraintTop_toBottomOf="@id/rb_ok"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
