--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,6 @@
     <color name="colorAccent">#03DAC5</color>
     <color name="black">#000000</color>
     <color name="color_2BA4D9">#2BA4D9</color>
+    <color name="color_cecece">#CECECE</color>
+    <color name="color_2ba4d9">#2BA4D9</color>
 </resources>
