--- a/app/src/main/res/layout/activity_push_tie.xml
+++ b/app/src/main/res/layout/activity_push_tie.xml
@@ -1,16 +1,156 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:ignore="MissingConstraints">
+    android:layout_height="match_parent">
 
-    <com.example.szh.tools.MyTitleBar
-        android:id="@+id/titleBar"
+
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:end_img="@mipmap/ic_send"
-        app:end_txt="发布"
-        app:star_txt="推帖子" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+        android:layout_height="match_parent"
+        tools:ignore="MissingConstraints">
+
+        <com.example.szh.tools.MyTitleBar
+            android:id="@+id/titleBar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:end_img="@mipmap/ic_send"
+            app:end_txt="发布"
+            app:star_txt="推帖子" />
+
+        <EditText
+            android:id="@+id/et_txt"
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:paddingLeft="20dp"
+            android:paddingEnd="20dp"
+            android:text="这一刻的想法..."
+            android:textColor="#ff989898"
+            android:textSize="14sp"
+            app:layout_constraintTop_toBottomOf="@id/titleBar" />
+
+        <TextView
+            android:id="@+id/tv_title"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="19dp"
+            android:layout_marginEnd="19dp"
+            android:paddingStart="62dp"
+            android:paddingTop="22dp"
+            android:paddingBottom="19dp"
+            android:text="SpaceX“龙”飞船首次载人试飞"
+            android:textColor="#ff020202"
+            android:textSize="14sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/et_txt" />
+
+        <TextView
+            android:id="@+id/tv_title_ag"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="15dp"
+            android:layout_marginTop="32dp"
+            android:text="使用银币推送"
+            android:textColor="#ff020202"
+            android:textSize="14sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tv_title" />
+
+        <TextView
+            android:layout_width="72dp"
+            android:layout_height="13dp"
+            android:layout_marginStart="15dp"
+            android:text="1银币推1人"
+            android:textColor="#ff5b5b5b"
+            android:textSize="14sp"
+            app:layout_constraintBottom_toBottomOf="@id/tv_title_ag"
+            app:layout_constraintStart_toEndOf="@id/tv_title_ag"
+            app:layout_constraintTop_toTopOf="@id/tv_title_ag" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv_ag"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingStart="25dp"
+            android:paddingTop="20dp"
+            android:paddingEnd="25dp"
+            android:paddingBottom="20dp"
+            app:layout_constraintTop_toBottomOf="@id/tv_title_ag" />
+
+        <TextView
+            android:id="@+id/tv_title_au"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="15dp"
+            android:layout_marginTop="32dp"
+            android:text="使用金币推送"
+            android:textColor="#ff020202"
+            android:textSize="14sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/rv_ag" />
+
+        <TextView
+            android:layout_width="72dp"
+            android:layout_height="13dp"
+            android:layout_marginStart="15dp"
+            android:text="1金币推10人"
+            android:textColor="#ff5b5b5b"
+            android:textSize="14sp"
+            app:layout_constraintBottom_toBottomOf="@id/tv_title_au"
+            app:layout_constraintStart_toEndOf="@id/tv_title_au"
+            app:layout_constraintTop_toTopOf="@id/tv_title_au" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv_au"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingStart="25dp"
+            android:paddingTop="20dp"
+            android:paddingEnd="25dp"
+            android:paddingBottom="20dp"
+            app:layout_constraintTop_toBottomOf="@id/tv_title_au" />
+
+        <TextView
+            android:id="@+id/tv_title_bottom"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingStart="15dp"
+            android:text="温馨提示："
+            android:textColor="#ff5b5b5b"
+            android:textSize="14sp"
+            app:layout_constraintTop_toBottomOf="@id/rv_au" />
+
+        <ImageView
+            android:layout_width="16dp"
+            android:layout_height="16dp"
+            android:layout_marginEnd="88dp"
+            android:src="@mipmap/ic_check_on"
+            app:layout_constraintBottom_toBottomOf="@id/tv_title_bottom"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@id/tv_title_bottom" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingEnd="15dp"
+            android:text="推给好友"
+            android:textColor="#ff5b5b5b"
+            android:textSize="14sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@id/tv_title_bottom" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingStart="15dp"
+            android:paddingTop="15dp"
+            android:paddingBottom="25dp"
+            android:text="1银币推给1人，1金币推给10人"
+            android:textColor="#ff5b5b5b"
+            android:textSize="14sp"
+            app:layout_constraintTop_toBottomOf="@id/tv_title_bottom" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
