--- a/app/src/main/res/layout/item_comment.xml
+++ b/app/src/main/res/layout/item_comment.xml
@@ -116,4 +116,20 @@
         android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="@id/tv_rmb"
         />
+
+
+    <ImageView
+        android:id="@+id/iv_close1"
+        android:layout_width="21dp"
+        android:layout_height="12dp"
+        android:layout_marginEnd="24.5dp"
+        android:background="#FFF2F2F2"
+        android:paddingStart="7dp"
+        android:paddingTop="3dp"
+        android:paddingEnd="7dp"
+        android:paddingBottom="3dp"
+
+        android:src="@mipmap/ic_close_x"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@id/tv_rmb" />
 </androidx.constraintlayout.widget.ConstraintLayout>
